--- a/src/shared/Popup/Popup.module.scss
+++ b/src/shared/Popup/Popup.module.scss
@@ -11,7 +11,7 @@
   padding: 40px;
   max-width: 750px;
   width: 100%;
-  background-color: $lite-background;
+  background-color: $ligth-color-background;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
 }
