--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@import "../../styles/variables.scss";
 .header {
   width: 100%;
   display: flex;
@@ -20,7 +21,9 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 25px;
+  color: $primary-color;
 }
 .change_theme {
   margin-right: 20px;
+  cursor: pointer;
 }
