--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   position: relative;
+  background: var(#{--body-background-default});
 }
 .container {
   max-width: 1200px;
